tests/NormalTests/paczka1/small_fuzzy/94875948.err
Error in line 1: 3tm3Ty742 S384 44,3
Error in line 3: EIgdng3 S384 73,5
Error in line 2: 3tm3Ty742 A77 45,6
Error in line 4: EIgdng3 A744 90,5
Error in line 10: EIgdng3 S494 25,4
